--- a/src/pages/Home/components/Description/style.css
+++ b/src/pages/Home/components/Description/style.css
@@ -5,9 +5,9 @@
     box-shadow: 0 2px 6px rgba(0,0,0,0.1);
     font-family: 'Inter', sans-serif;
     color: #333;
-    max-width: 50%;
     line-height: 1.5;
     font-size: 1rem;
+    margin: 1rem;
 }
 
 .description h2 {
