--- a/src/pages/Home/components/QuickData/style.css
+++ b/src/pages/Home/components/QuickData/style.css
@@ -5,8 +5,8 @@
     box-shadow: 0 2px 6px rgba(0,0,0,0.1);
     font-family: 'Inter', sans-serif;
     color: #333;
-    max-width: 50%;
     font-size: 1rem;
+    margin: 1rem;
 }
 
 .quickData h2 {
