--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -10,6 +10,7 @@
     gap: 1rem;
 }
 
+
 .navbar a {
   font-family: 'Inter', 'Roboto', 'Helvetica Neue', Arial, sans-serif;
   font-weight: 600;
@@ -20,6 +21,7 @@
   padding: 0.5rem 1rem;
   cursor: pointer;
   transition: color 0.3s ease;
+  text-align: center;
 }
 
 .navbar a:hover {
@@ -105,4 +107,26 @@
 .navbar-login.active,
 .navbar-register.active {
   text-decoration: none !important;
+}
+
+.sub-nav {
+  display: flex;
+}
+@media (max-width: 768px) {
+  .navbar {
+    padding: 0.2rem;
+    gap: 0;
+  }
+  .navbar-user {
+    font-size: 0.7rem;
+    text-align: center;
+  }
+  .navbar-right {
+    gap: 0rem;
+    flex-direction: column;
+  }
+  .navbar a {
+    font-size: 0.8rem;
+    padding: 0.3rem 0.5rem;
+    }
 }
