--- a/src/components/DataList/style.css
+++ b/src/components/DataList/style.css
@@ -178,7 +178,9 @@
 .mselect__value {
   flex: 1;
   color: #222;
-  font-size: 0.95rem;
+  font-size: 1rem;
+  font-weight: 800;
+  text-transform: uppercase;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
